# nrf54lm20-se05x-ncs

./: .gitignore  CMakeLists.txt  README.md  build.cmd  prj.conf  sysbuild.conf
api/: README.md
boards/: README.md  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
demo/: README.md  se05x_demo.c  se05x_demo.h  se05x_demo_00_uart_safe_api.c  se05x_demo_01_safe_read_only.c  se05x_demo_02_identity_random.c  se05x_demo_03_inventory.c  se05x_demo_04_business_onboarding.c  se05x_demo_05_provisioning_check.c  se05x_demo_06_ecc_sign_verify.c  se05x_demo_07_certificate_store.c  se05x_demo_08_tls_client_identity.c  se05x_demo_09_wallet_curve_check.c  se05x_demo_10_eth_wallet_sign.c  se05x_demo_11_eth_testnet_wallet.c
nxp_se05x/: CMakeLists.txt  README.md
nxp_se05x/include/: ex_sss_auth.h  fsl_sss_ftr.h
nxp_se05x/nxp/plug-and-trust/hostlib/hostLib/inc/: se05x_tlv.h
nxp_se05x/nxp/plug-and-trust/hostlib/hostLib/libCommon/smCom/T1oI2C/: phNxpEse_Api.c  phNxpEse_Api.h  phNxpEse_Internal.h
nxp_se05x/nxp/plug-and-trust/hostlib/hostLib/platform/generic/: sm_timer.c
nxp_se05x/nxp/plug-and-trust/hostlib/hostLib/platform/inc/: i2c_a7.h  sm_printf.h  sm_timer.h
nxp_se05x/nxp/plug-and-trust/hostlib/hostLib/platform/linux/: i2c_a7.c
nxp_se05x/nxp/plug-and-trust/hostlib/hostLib/se05x_03_xx_xx/: se05x_perso_api.c  se05x_perso_api.h
nxp_se05x/nxp/plug-and-trust/sss/ex/inc/: ex_sss_main_inc.h  ex_sss_tp_scp03_keys.h
nxp_se05x/nxp/plug-and-trust/sss/inc/: fsl_sss_ftr_default.h  fsl_sss_se05x_types.h  fsl_sss_user_types.h
nxp_se05x/nxp/plug-and-trust/sss/port/default/: fsl_sss_types.h
nxp_se05x/nxp/plug-and-trust/sss/src/se05x/: fsl_sss_se05x_apis.c
nxp_se05x/nxp/plug-and-trust/sss/src/user/crypto/: aes.h
nxp_se05x/port/: ax_reset_esp_idf.c  ax_reset_zephyr.c  freertos_zephyr_shim.c  i2c_a7_se05x_bus.c  i2c_a7_zephyr_bus.c  sm_timer_esp_idf.c  sm_timer_zephyr.c  sss_user_esp_crypto.c  sss_user_zephyr_crypto.c
nxp_se05x/port/include/: FreeRTOS.h  FreeRTOSConfig.h  app_boot.h  fsl_debug_console.h  task.h
se05x_bus/: CMakeLists.txt  Kconfig  README.md
se05x_bus/include/: se05x_bus.h  se05x_bus_esp_idf.h  se05x_bus_zephyr.h
se05x_bus/src/: se05x_bus.c  se05x_bus_esp_idf_i2c.c  se05x_bus_zephyr_i2c.c
src/: README.md  main.c
tools/: README.md  broadcast_demo11_sepolia_tx.py  verify_demo09_signature.py  verify_demo10_eth_tx.py
