set(NXP_DIR "${CMAKE_CURRENT_LIST_DIR}/nxp/plug-and-trust")

set(NXP_SE05X_SRCS
    "${NXP_DIR}/sss/ex/src/ex_sss_boot.c"
    "${NXP_DIR}/sss/ex/src/ex_sss_boot_connectstring.c"
    "${NXP_DIR}/sss/ex/src/ex_sss_se05x.c"
    "${NXP_DIR}/sss/ex/src/ex_sss_se05x_auth.c"
    "${NXP_DIR}/sss/src/fsl_sss_apis.c"
    "${NXP_DIR}/sss/src/fsl_sss_util_asn1_der.c"
    "${NXP_DIR}/sss/src/fsl_sss_util_rsa_sign_utils.c"
    "${NXP_DIR}/sss/src/keystore/keystore_cmn.c"
    "${NXP_DIR}/sss/src/keystore/keystore_pc.c"
    "${NXP_DIR}/sss/src/se05x/fsl_sss_se05x_apis.c"
    "${NXP_DIR}/sss/src/se05x/fsl_sss_se05x_eckey.c"
    "${NXP_DIR}/sss/src/se05x/fsl_sss_se05x_mw.c"
    "${NXP_DIR}/sss/src/se05x/fsl_sss_se05x_policy.c"
    "${NXP_DIR}/sss/src/se05x/fsl_sss_se05x_scp03.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/infra/global_platf.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/infra/sm_apdu.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/infra/sm_connect.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/infra/sm_errors.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/infra/sm_printf.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/log/nxLog.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/nxScp/nxScp03_Com.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/smCom/smCom.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/smCom/smComT1oI2C.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/smCom/T1oI2C/phNxpEse_Api.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/smCom/T1oI2C/phNxpEseProto7816_3.c"
    "${NXP_DIR}/hostlib/hostLib/libCommon/smCom/T1oI2C/phNxpEsePal_i2c.c"
    "${NXP_DIR}/hostlib/hostLib/se05x/src/se05x_ECC_curves.c"
    "${NXP_DIR}/hostlib/hostLib/se05x/src/se05x_mw.c"
    "${NXP_DIR}/hostlib/hostLib/se05x/src/se05x_tlv.c"
    "${NXP_DIR}/hostlib/hostLib/se05x_03_xx_xx/se05x_APDU.c"
    "${NXP_DIR}/hostlib/hostLib/se05x_03_xx_xx/se05x_perso_api.c"
    "port/i2c_a7_se05x_bus.c"
    "port/sm_timer_esp_idf.c"
    "port/ax_reset_esp_idf.c"
    "port/sss_user_esp_crypto.c"
)

idf_component_register(
    SRCS ${NXP_SE05X_SRCS}
    INCLUDE_DIRS
        "include"
        "port/include"
        "${NXP_DIR}"
        "${NXP_DIR}/sss/inc"
        "${NXP_DIR}/sss/ex/inc"
        "${NXP_DIR}/sss/ex/src"
        "${NXP_DIR}/sss/port/default"
        "${NXP_DIR}/hostlib/hostLib/inc"
        "${NXP_DIR}/hostlib/hostLib/libCommon/infra"
        "${NXP_DIR}/hostlib/hostLib/libCommon/log"
        "${NXP_DIR}/hostlib/hostLib/libCommon/smCom"
        "${NXP_DIR}/hostlib/hostLib/libCommon/smCom/T1oI2C"
        "${NXP_DIR}/hostlib/hostLib/platform/inc"
        "${NXP_DIR}/hostlib/hostLib/se05x_03_xx_xx"
    REQUIRES
        esp_driver_gpio
        mbedtls
        se05x_bus
)

target_compile_definitions(${COMPONENT_LIB}
    PUBLIC
        SSS_USE_FTR_FILE
        SMCOM_T1oI2C
        T1oI2C
        T1oI2C_UM11225
        T1OI2C_RETRY_ON_I2C_FAILED
        USE_RTOS=1
        AX_EMBEDDED=1
)

target_compile_options(${COMPONENT_LIB}
    PRIVATE
        -Wno-unused-parameter
        -Wno-sign-compare
        -Wno-missing-field-initializers
        -Wno-format
        -Wno-incompatible-pointer-types
        -Wno-unused-variable
        -Wno-unused-function
        -Wno-unused-value
)
